Backport changes for JDBC-267 and JDBC-268